--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -3,6 +3,7 @@
         "brand": "StreetFood.com",
         "login": "Log In",
         "signup": "Sign Up",
-        "cart": "Cart"
+        "cart": "Cart",
+        "footer-text": "or its affiliates"
     }
 }
