--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -3,6 +3,7 @@
         "brand": "สตรีทฟู้ด.คอม",
         "login": "เข้าสู่ระบบ",
         "signup": "ลงชื่อ",
-        "cart": "รถเข็น"
+        "cart": "รถเข็น",
+        "footer-text": "หรือบริษัทในเครือ"
     }
 }
