--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -5,5 +5,20 @@
         "signup": "ลงชื่อ",
         "cart": "รถเข็น",
         "footer-text": "หรือบริษัทในเครือ"
+    },
+
+    "modal": {
+        "mail": "ที่อยู่อีเมล์",
+        "password": "รหัสผ่าน",
+        "forgotPw": "ลืมรหัสผ่านหรือไม่",
+        "firstName": "ชื่อจริง",
+        "pseudo": "หลอก",
+        "confirmPw": "ยืนยันรหัสผ่าน",
+        "validEmail": "กรุณาใส่อีเมล์ที่ถูกต้อง",
+        "validPw": "รหัสผ่านจะต้องมีอักขระอย่างน้อย 6 ตัว รวมทั้งตัวพิมพ์ใหญ่อย่างน้อยหนึ่งตัว",
+        "validName": "จำเป็นต้องระบุชื่อ",
+        "validPseudo": "จำเป็นต้องใช้หลอก",
+        "validConfirm": "รหัสผ่านจะต้องเหมือนกัน",
+        "createAcc": "สร้างบัญชี"
     }
 }
