--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -20,5 +20,13 @@
         "validPseudo": "จำเป็นต้องใช้หลอก",
         "validConfirm": "รหัสผ่านจะต้องเหมือนกัน",
         "createAcc": "สร้างบัญชี"
+    },
+
+    "product": {
+        "bestOffers": "ข้อเสนอที่ดีที่สุด -10%",
+        "bestSales": "ยอดขายดีที่สุด",
+        "inStock": "มีสินค้า",
+        "lowStock": "สต็อกต่ำ",
+        "outStock": "สินค้าหมด"
     }
 }
