--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -2,6 +2,7 @@
     "generic": {
         "brand": "สตรีทฟู้ด.คอม",
         "login": "เข้าสู่ระบบ",
+        "logOut": "ออกจากระบบ",
         "signup": "ลงชื่อ",
         "cart": "รถเข็น",
         "footer-text": "หรือบริษัทในเครือ"
@@ -28,5 +29,9 @@
         "inStock": "มีสินค้า",
         "lowStock": "สต็อกต่ำ",
         "outStock": "สินค้าหมด"
+    },
+
+    "account": {
+        "admin": "ผู้ดูแลระบบ"
     }
 }
