--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -20,7 +20,11 @@
         "validName": "จำเป็นต้องระบุชื่อ",
         "validPseudo": "จำเป็นต้องใช้หลอก",
         "validConfirm": "รหัสผ่านจะต้องเหมือนกัน",
-        "createAcc": "สร้างบัญชี"
+        "createAcc": "สร้างบัญชี",
+        "registerResponseOk": "ส่งอีเมลเรียบร้อยแล้ว",
+        "registerResponseFail": "เกิดข้อผิดพลาดที่ไม่คาดคิดขณะส่งอีเมลยืนยัน โปรดลองอีกครั้ง",
+        "createAccOk": "เปลี่ยนเส้นทางไปยังหน้าแรก ",
+        "createAccFail": "เกิดข้อผิดพลาดที่ไม่คาดคิดขณะสร้างบัญชี กรุณาลองอีกครั้ง"
     },
 
     "product": {
