--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -20,7 +20,11 @@
         "validName": "First Name must contain at least 3 characters.",
         "validPseudo": "Pseudo must contain at least 3 characters.",
         "validConfirm": "Password must be same as entered.",
-        "createAcc": "Create an account"
+        "createAcc": "Create an account",
+        "registerResponseOk": "An email has been sent successfully",
+        "registerResponseFail": "An unexpected error occurred while sending the confirmation email. Please try again.",
+        "createAccOk": "Redirect to Home page .. ",
+        "createAccFail": "An unexpected error occurred while creating the account. Please try again."
     },
 
     "product": {
