--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -2,10 +2,9 @@
     "generic": {
         "brand": "สตรีทฟู้ด.คอม",
         "login": "เข้าสู่ระบบ",
-        "logOut": "ออกจากระบบ",
-        "signup": "ลงชื่อ",
+        "signUp": "ลงชื่อ",
         "cart": "รถเข็น",
-        "footer-text": "หรือบริษัทในเครือ"
+        "footerText": "หรือบริษัทในเครือ"
     },
 
     "modal": {
@@ -27,6 +26,13 @@
         "createAccFail": "เกิดข้อผิดพลาดที่ไม่คาดคิดขณะสร้างบัญชี กรุณาลองอีกครั้ง"
     },
 
+    "userModal": {
+        "admin": "ผู้ดูแลระบบ",
+        "myAccount": "บัญชีของฉัน",
+        "settings": "การตั้งค่า",
+        "logOut": "ออกจากระบบ"
+    },
+
     "product": {
         "newProducts": "สินค้าใหม่",
         "bestOffers": "ข้อเสนอที่ดีที่สุด",
@@ -34,10 +40,6 @@
         "inStock": "มีสินค้า",
         "lowStock": "สต็อกต่ำ",
         "outStock": "สินค้าหมด"
-    },
-
-    "account": {
-        "admin": "ผู้ดูแลระบบ"
     },
 
     "error": {
