--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -1,9 +1,8 @@
 {
     "generic": {
         "brand": "StreetFood.com",
-        "login": "Log In",
-        "logOut": "Log Out",
-        "signup": "Sign Up",
+        "logIn": "Log In",
+        "signUp": "Sign Up",
         "cart": "Cart",
         "footer-text": "or its affiliates"
     },
@@ -27,6 +26,13 @@
         "createAccFail": "An unexpected error occurred while creating the account. Please try again."
     },
 
+    "userModal": {
+        "admin": "Admin",
+        "myAccount": "My Account",
+        "settings": "Settings",
+        "logOut": "Log Out"
+    },
+
     "product": {
         "newProducts": "New Products",
         "bestOffers": "Best Offers",
@@ -34,10 +40,6 @@
         "inStock": "In stock",
         "lowStock": "Low stock",
         "outStock": "Out of stock"
-    },
-
-    "account": {
-        "admin": "Admin"
     },
 
     "error": {
