--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -43,6 +43,8 @@
     },
 
     "error": {
-        "404": "Page not found"
+        "404": "Page not found",
+        "loading": "Loading ...",
+        "comingSoon": "Coming soon ..."
     }
 }
