--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -43,6 +43,8 @@
     },
 
     "error": {
-        "404": "ไม่พบหน้านี้"
+        "404": "ไม่พบหน้านี้",
+        "loading": "กำลังโหลด ...",
+        "comingSoon": "เร็วๆ นี้ ..."
     }
 }
