--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -4,7 +4,7 @@
         "logIn": "Log In",
         "signUp": "Sign Up",
         "cart": "Cart",
-        "footer-text": "or its affiliates"
+        "footerText": "or its affiliates"
     },
 
     "modal": {
