--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -1,7 +1,7 @@
 {
     "generic": {
         "brand": "สตรีทฟู้ด.คอม",
-        "login": "เข้าสู่ระบบ",
+        "logIn": "เข้าสู่ระบบ",
         "signUp": "ลงชื่อ",
         "cart": "รถเข็น",
         "footerText": "หรือบริษัทในเครือ"
