--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -42,6 +42,14 @@
         "outStock": "Out of stock"
     },
 
+    "filter": {
+        "filterTitle": "Filter your products",
+        "new": "New",
+        "bestOffers": "Best Offers",
+        "bestSellers": "Best Sellers",
+        "price": "Price"
+    },
+
     "error": {
         "404": "Page not found",
         "loading": "Loading ...",
