--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -42,6 +42,14 @@
         "outStock": "สินค้าหมด"
     },
 
+    "filter": {
+        "filterTitle": "กรองผลิตภัณฑ์ของคุณ",
+        "new": "ใหม่",
+        "bestOffers": "ข้อเสนอที่ดีที่สุด",
+        "bestSellers": "ยอดขายดีที่สุด",
+        "price": "ราคา"
+    },
+
     "error": {
         "404": "ไม่พบหน้านี้",
         "loading": "กำลังโหลด ...",
