--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -23,7 +23,8 @@
         "registerResponseOk": "An email has been sent successfully",
         "registerResponseFail": "An unexpected error occurred while sending the confirmation email. Please try again.",
         "createAccOk": "Redirect to Home page .. ",
-        "createAccFail": "An unexpected error occurred while creating the account. Please try again."
+        "createAccFail": "An unexpected error occurred while creating the account. Please try again.",
+        "invalidCredentials": "Invalid credentials provided."
     },
 
     "userModal": {
