--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -23,7 +23,8 @@
         "registerResponseOk": "ส่งอีเมลเรียบร้อยแล้ว",
         "registerResponseFail": "เกิดข้อผิดพลาดที่ไม่คาดคิดขณะส่งอีเมลยืนยัน โปรดลองอีกครั้ง",
         "createAccOk": "เปลี่ยนเส้นทางไปยังหน้าแรก ",
-        "createAccFail": "เกิดข้อผิดพลาดที่ไม่คาดคิดขณะสร้างบัญชี กรุณาลองอีกครั้ง"
+        "createAccFail": "เกิดข้อผิดพลาดที่ไม่คาดคิดขณะสร้างบัญชี กรุณาลองอีกครั้ง",
+        "invalidCredentials": "ข้อมูลประจำตัวที่ระบุไม่ถูกต้อง"
     },
 
     "userModal": {
