--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -4,6 +4,7 @@
         "logIn": "Log In",
         "signUp": "Sign Up",
         "cart": "Cart",
+        "resetCart": "Reset Cart",
         "footerText": "or its affiliates"
     },
 
