--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -4,6 +4,7 @@
         "logIn": "เข้าสู่ระบบ",
         "signUp": "ลงชื่อ",
         "cart": "รถเข็น",
+        "resetCart": "รีเซ็ตตะกร้า",
         "footerText": "หรือบริษัทในเครือ"
     },
 
