--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -4,7 +4,13 @@
         "logIn": "เข้าสู่ระบบ",
         "signUp": "ลงชื่อ",
         "cart": "รถเข็น",
-        "resetCart": "รีเซ็ตตะกร้า",
+        "resetCart": "รีเซ็ตตะกร้า"
+    },
+
+    "footer": {
+        "terms": "เงื่อนไข",
+        "privacy": "นโยบายความเป็นส่วนตัว",
+        "contact": "ติดต่อ",
         "footerText": "หรือบริษัทในเครือ"
     },
 
