--- a/public/assets/locales/th/translation.json
+++ b/public/assets/locales/th/translation.json
@@ -1,7 +1,7 @@
 {
     "generic": {
-        "brand1": "StreetFood",
-        "brand2": ".Tech",
+        "brand1": "streetFood",
+        "brand2": ".digital",
         "logIn": "เข้าสู่ระบบ",
         "signUp": "ลงชื่อ",
         "cart": "รถเข็น",
