--- a/public/assets/locales/en/translation.json
+++ b/public/assets/locales/en/translation.json
@@ -1,7 +1,7 @@
 {
     "generic": {
-        "brand1": "StreetFood",
-        "brand2": ".Tech",
+        "brand1": "streetFood",
+        "brand2": ".digital",
         "logIn": "Log In",
         "signUp": "Sign Up",
         "cart": "Cart",
